--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "npm": "^8.12.0",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.3",
